	* src/DataViews/_PersonView.py: search bar implementation
	* src/PeopleModel.py: search bar implementation
	* src/PageView.py: search bar implementation
	* src/Filters/_SearchBar.py: search bar functionality
	* src/Filters/__init__.py: search bar functionality
	* src/AddMedia.py: remember last directory for images for 
	the session

2006-05-09  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/FamilyGroup.py: Use triple quotes.
	* src/Exporter.py (Exporter.native_export): Use callback.
	* src/Utils.py (get_new_filename): Add path separator.
	* src/GrampsDb/_WriteGrdb.py: Proper export of tables with and
	without transaction support, add callback.
	* src/plugins/WriteCD.py: Correctly import XmlWriter.
	* src/GrampsDb/_WriteXML.py (write_object): Check whether path is
	empty before removing leading slash.
	* src/GrampsDb/_WriteGedcom.py: Bring to new API.
	* src/plugins/ExportVCard.py: Bring to new API.
	* src/plugins/ExportVCalendar.py: Bring to new API.
	* src/plugins/WriteFtree.py: Bring to new API.
	* src/Filters/_FilterMenu.py (build_filter_menu): Return the menu.
	* src/plugins/WriteGeneWeb.py: Bring to new API.

2006-05-09  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MapView.py: add tool tips to tool buttons
	* src/ViewManager.py: add tool tips to Open button

2006-05-08  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (get_default_person): Use proper
	way of getting person from the handle.

2006-05-08  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: get_default_handle()
	* src/DisplayState.py: use get_default_handle, fix race condition 

2006-05-08  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (load): Better non-TXN support.
	* src/UndoHistory.py (__init__): Rename list to tree.

	* src/DataViews/_PersonView.py (delete_person_response): Use child_ref.
	* src/plugins/Leak.py: Typo.
	* src/plugins/Eval.py: Convert to ManagedWindow.