@@ -30,6 +30,7 @@ from _GrampsInMemDB import *
 
 import _ReadGedcom as ReadGedcom
 import _WriteGedcom as WriteGedcom
+from _DbUtils import db_copy
 
 #-------------------------------------------------------------------------
 #
@@ -54,6 +55,17 @@ class GrampsGEDDB(GrampsInMemDB):
         if self.bookmarks == None:
             self.bookmarks = []
         self.db_is_open = True
+        return 1
+
+    def load_from(self, other_database, filename, callback):
+        db_copy(other_database,self,callback)
+        GrampsInMemDB.load(self,filename,callback)
+        self.bookmarks = self.metadata.get('bookmarks')
+        if self.bookmarks == None:
+            self.bookmarks = []
+        self.db_is_open = True
+        writer = WriteGedcom.GedcomWriter(self,self.get_default_person())
+        writer.export_data(self.full_name)
         return 1
 
     def close(self):
